--- a/vudjit-client/src/assets/css/vudjit.less
+++ b/vudjit-client/src/assets/css/vudjit.less
@@ -13,19 +13,16 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: -.005em;
   font-weight: 600;
 }
-body, #wrapper { min-height: 100vh; }
 
-#acct-add-container {
-  #acct-add {
-    width: 100%;
-    max-width: 480px;
-    padding: 40px;
-    background-color: var(--vudjit-color);
-    color: #fff;
-  }
+#acct-add, #pay-period {
+  width: 100%;
+  max-width: 480px;
+  padding: 40px;
+  background-color: var(--vudjit-color);
+  color: #fff;
 }
 .valign-middle {
-  min-height: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,6 +57,7 @@ body, #wrapper { min-height: 100vh; }
   }
 }
 /* Bootstrap */
+button { border-radius: 0px !important }
 .btn-success {
   background-color: var(--success-color) !important;
   border-color: var(--success-color) !important;
@@ -89,4 +87,7 @@ body, #wrapper { min-height: 100vh; }
 
 .bg-black {
   background-color: rgba(0,0,0,0.35);
+}
+.bg-red {
+  background-color: #CA0909;
 }
